kubernetes/tutorial/pod_ns.yaml
apiVersion: v1
kind: Pod
metadata: 
 name: nginx
 namespace: miespacio
 labels:
  project: pagina_web
  environment: testing
spec:
 containers:
 - name: nginx
   image: nginx:latest
   ports:
   - containerPort: 80
