kubernetes/tutorial/svc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /nginx(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: svc-nginx
                port:
                  number: 80
          - path: /apache(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: svc-http
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-nginx
  template:
    metadata:
      labels:
        app: server-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
spec:
  selector:
    app: server-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-apache
  template:
    metadata:
      labels:
        app: server-apache
    spec:
      containers:
        - name: apache
          image: httpd:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-http
spec:
  selector:
    app: server-apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
